# my-api

./: .env  Dockerfile  README.md  makefile  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
