[tool.poetry]
name = "01-docker"
version = "0.1.0"
description = "Week 1 Day 1 - Docker Advanced by Le Wagon"
authors = ["S. Saunier <seb@lewagon.org>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
dockerfile = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
